traced-test/tests/ui/invalid_combination_with_tokio_test.stderr
error: custom attribute panicked
 --> tests/ui/invalid_combination_with_tokio_test.rs:4:1
  |
4 | #[traced_test]
  | ^^^^^^^^^^^^^^
  |
  = help: message: traced_test generator error: TokenStream(
              TokenStream [
                  Ident {
                      ident: "compile_error",
                      span: #5 bytes(109..123),
                  },
                  Punct {
                      ch: '!',
                      spacing: Alone,
                      span: #5 bytes(109..123),
                  },
                  Group {
                      delimiter: Parenthesis,
                      stream: TokenStream [
                          Literal {
                              kind: Str,
                              symbol: "The `traced_test` attribute should be used in place of `#[test]` or `#[tokio::test]`, not alongside them.",
                              suffix: None,
                              span: #5 bytes(109..123),
                          },
                      ],
                      span: #5 bytes(109..123),
                  },
                  Punct {
                      ch: ';',
                      spacing: Alone,
                      span: #5 bytes(109..123),
                  },
              ],
          )
